Fixed header tabs by wrapping withRouter

--- a/src/styles/components/_videoListFilters.scss
+++ b/src/styles/components/_videoListFilters.scss
@@ -2,53 +2,47 @@
     height: 380px !important;
 }
 
-.row {
+.VLF-1 {
     margin-top: $m-size;
 }
 
 // -- Drop down boxes styling
-.input-field > label{
+.VLF-1 .input-field > label{
     color: rgba(255,255,255,0.7);
+    font-size: 1rem;
 }
 
-.select-wrapper input.select-dropdown{
+.VLF-1 .select-wrapper input.select-dropdown{
     border-bottom: 1px solid rgba(255,255,255,0.7);
     color: rgba(255,255,255,0.9);
     margin: 4px 0 8px 0;
 }
 
-.select-wrapper .caret {
+.VLF-1 .select-wrapper .caret {
     fill: rgba(255,255,255,.87);
 }
 
 // -- Hits per Page component
-.range-field {
-    display:flex;
-    flex-direction: column;
+.VLF-1 .range-field {
     margin: 0;
-    position: relative;
-    top: 2rem;
+    bottom: 1.3rem;
     height: 100%;
 }
 
-.range-field #searchNum{
+.VLF-1 .range-field #searchNum{
     padding: 0 $s-size;
     margin:0
 }
 
-.range-field label{
-    color: rgba(255,255,255,0.7);
-    height: 100%;
-    position: relative;
-    top: -0.8rem !important;
-    padding: 0 0.6rem;
+.VLF-1 div:nth-child(3) label{
+    margin-left: 1rem;
 }
 
 // -- checkbox positioning
-.input-field .chk-label{
+.VLF-1 .input-field .chk-label{
     position:relative;
 }
-.input-field .chk-label span{
+.VLF-1 .input-field .chk-label span{
     padding-left: 2.5rem;
 }
 
